# aiomonobank

./: .gitignore  LICENSE  README.md  README.rst  base.py  pyproject.toml
aiomonobank/: __init__.py  api.py  base.py  monobank.py
aiomonobank/types/: __init__.py  account.py  client_info.py  currency.py  jar.py  statement_item.py  webhook_data.py
aiomonobank/utils/: __init__.py  exceptions.py
examples/: webhook.py
types/: client_info.py  webhook_data.py
