[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiomonobank"
version = "1.0.0"
description = "Asynchronous Python library for monobank API"
long_description='readme_contents'
long_description_content_type='text/x-rst'
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "TT1410", email = "taras@plaksii.cf" }
]
maintainers = [
    { name = "TT1410", email = "taras@plaksii.cf" }
]
keywords = [
    "monobank",
    "bank",
    "api",
    "library",
    "wrapper",
    "asyncio",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiohttp~=3.8.4",
    "pydantic~=1.10.7",
    "certifi>=2022.12.7",
    "pytz>=2023.3",
    "aiocache>=0.12.1",

]
#dynamic = ["version"]

[tool.hatch.version]
path = "aiomonobank/__init__.py"

[project.urls]
Homepage = "https://github.com/TT1410/aiomonobank"
Documentation = "https://github.com/TT1410/aiomonobank"
Repository = "https://github.com/TT1410/aiomonobank"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
certifi = "^2022.12.7"
pytz = "^2023.3"
aiocache = "^0.12.1"
